<resources>
    <string name="app_name">MaterialDesign</string>
    <string name="welcome_in_my_app">Welcome in my app!</string>
    <string name="its_button">It\'s button!</string>
    <string name="enter_text">Enter text…</string>
    <string name="click_to_show_snackbar">CLick to show Snackbar</string>
    <string name="snackbar_activated">SnacbarActivated!</string>
    <string name="snackbar_title">Snackbar</string>
    <string name="show_message">Show message</string>
    <string name="edit_text_title">EditText</string>
    <string name="bottom_sheet_title">Bottom-Sheet</string>
    <string name="it_s_info_in_bottom_sheet">It\'s info in bottom-sheet</string>
    <string name="buttons_title">Buttons</string>
    <string name="text_flat_button">Text Flat Button</string>
    <string name="outlined_flat_button">Outlined Flat Button</string>
    <string name="raised_button">Raised Button</string>
    <string name="raised_button_background">Raised Button Background</string>
    <string name="toolbar_title">Toolbar</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Material Design</string>
    <string name="nav_header_subtitle">Geekbrains Android Developer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="collapsing_title">Collapsing</string>
    <string name="fab_title">Fab</string>
    <string name="show_image">Show Image</string>
    <string name="recycler_view_title">Recycler View</string>
    <string name="testudines_text">Черепа́хи (лат. Testudines) — один из четырёх современных отрядов
        пресмыкающихся. Содержит около 328 современных видов, группируемых в 14 семейств и два
        подотряда[1]Перейти к разделу «#Классификация». Ископаемые остатки черепах прослеживаются
        на протяжении более 220 миллионов лет.
Несмотря на то, что традиционно черепахи рассматривались как анапсиды[2][3][4], все генетические
        исследования подтвердили гипотезу о том, что черепахи — это диапсиды с редуцированными
        височными окнами; некоторые авторы помещали черепах в группу лепидозавроморф[5],
        хотя все более поздние исследования подтвердили их положение внутри группы архозавроморф[6].
Отличительным признаком черепах является панцирь, состоящий из двух частей: карапакса и пластрона,
        и служащий основной защитой от враговПерейти к разделу «#Панцирь».
Черепахи распространены в тропической и умеренной климатических зонах почти по всей Земле.
        Экологически их подразделяют на морских и наземных, а наземных, в свою очередь,
        на сухопутных и пресноводных[7].
Многие виды черепах служат пищей человекуПерейти к разделу «#Использование»,
        но мясо некоторых может быть ядовитымПерейти к разделу «#Ядовитость».
        Также многие виды черепах находятся под угрозой вымирания разной степени и охраняются
        Перейти к разделу «#Охранный статус». Черепаха является распространённым символом
        в культуре многих народовПерейти к разделу «#В культуре и искусстве».</string>
    <string name="tab_title">Tabs</string>
    <string name="bottom_navigation_title">Bottom Navigation View</string>
    <string name="style_title">Style</string>
    <string name="theme_title">Theme</string>
</resources>